[package]
name = "rust_codestyle"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[package.metadata.cargo-machete]
ignored = ["derive-new", "eyre", "serde", "tokio"]

[lints.clippy]
float_cmp = "allow" # is bad for `==` direct comparisons, but `<` and `>` should be allowed
#get_first = "allow" # const fn, so actually more performant
len_zero = "allow" # `.empty()` is O(1) but on &str only

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
derive-new = "^0.7.0"
eyre = "^0.6.12"
proc-macro2 = { version = "1.0.86", features = ["nightly", "span-locations"] }
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
walkdir = "2.3.2"
